# crashy

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  crashy.cpp  payload.cpp
.github/workflows/: build.yml  check-formatting.yml
